appId: ${APP_ID}
---
- launchApp:
    clearState: true
    arguments:
      skipWhatsNew: true
    permissions: { all: allow }
- setLocation:
    latitude: 47.7168079
    longitude: 18.8950729
- extendedWaitUntil:
    visible:
      id: MAP_MAPBOX
    timeout: 10000
- tapOn: "Layers"
- assertVisible: "Base Map"
- tapOn: "Satellite"
- tapOn: "Hiking Trails"
- tapOn: "Close"
